[gd_scene load_steps=5 format=2]

[ext_resource path="res://login/script/Control.gd" type="Script" id=1]
[ext_resource path="res://imagem/bloco.png" type="Texture" id=2]
[ext_resource path="res://imagem/suricato1-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://imagem/bloco3.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 3.0
margin_right = -1.0
margin_bottom = 3.0
script = ExtResource( 1 )

[node name="Bloco3" type="Sprite" parent="."]
position = Vector2( 416.75, 281 )
scale = Vector2( 3.04007, 3.1134 )
texture = ExtResource( 4 )

[node name="Bloco" type="Sprite" parent="Bloco3"]
position = Vector2( 93.4189, 109.205 )
scale = Vector2( 0.8096, 0.321192 )
texture = ExtResource( 2 )

[node name="Suricato1-removebg-preview" type="Sprite" parent="Bloco3"]
position = Vector2( 92.8433, 11.5629 )
scale = Vector2( 0.395397, 0.388755 )
texture = ExtResource( 3 )

[node name="CPFLineEdit" type="LineEdit" parent="."]
anchor_right = 0.071
anchor_bottom = 0.127
margin_left = 257.0
margin_top = 228.0
margin_right = 517.36
margin_bottom = 175.8
max_length = 15
__meta__ = {
"_editor_description_": "\"nnn.nnn.nnn-nn\""
}

[node name="SenhaLineEdit" type="LineEdit" parent="."]
margin_left = 257.0
margin_top = 257.0
margin_right = 577.0
margin_bottom = 281.0
max_length = 6
secret = true

[node name="LoginButton" type="Button" parent="."]
margin_left = 257.0
margin_top = 295.0
margin_right = 577.0
margin_bottom = 315.0
text = "Login"

[node name="ErrorLabel" type="Label" parent="."]
modulate = Color( 0.929412, 0.0235294, 0.0235294, 1 )
self_modulate = Color( 0.862745, 0.345098, 0.345098, 1 )
anchor_left = 0.121
anchor_top = 0.146
anchor_right = 0.121
anchor_bottom = 0.146
margin_left = 158.36
margin_top = 247.4
margin_right = 477.36
margin_bottom = 308.4
